--- a/Event/templates/Event/dashboard.html
+++ b/Event/templates/Event/dashboard.html
@@ -15,7 +15,10 @@
     <h2 class="mb-3" style="margin-top: 130px;">Admin Dashboard</h2>
 
     <!-- Table container for centering and scroll -->
-    <div class="table-container" style="overflow-x:auto; text-align:center;">
+    <div class="table-container" style="overflow-x:auto; text-align:center;  display: flex !important;
+    flex-direction: column!important;
+    align-items: center !important; 
+    text-align: center !important; ">
         <table class="table table-striped table-bordered" style="margin:auto; min-width:600px;">
             <thead class="table-primary">
                 <tr>
