--- a/Event/templates/Event/dashboard.html
+++ b/Event/templates/Event/dashboard.html
@@ -17,7 +17,7 @@
 
     <!-- Table container for centering and scroll -->
     <div class="table-container">
-        <table class="table table-striped table-bordered" style="margin:auto; min-width:1000px;">
+        <table class="table table-striped table-bordered" style="margin-right: 50rm !important;">
             <thead class="table-primary" style=" margin-right: 30rm !important;text-align: center !important; vertical-align: middle !important;">
                 <tr>
                     <th>Name</th>
