--- a/Event/templates/Event/dashboard.html
+++ b/Event/templates/Event/dashboard.html
@@ -17,8 +17,8 @@
 
     <!-- Table container for centering and scroll -->
     <div class="table-container">
-        <table class="table table-striped table-bordered" style="margin-right: 50rm !important;">
-            <thead class="table-primary" style=" margin-right: 30rm !important;text-align: center !important; vertical-align: middle !important;">
+        <table class="table table-striped table-bordered" style="margin: 0 auto !important; min-width: 600px;">
+            <thead class="table-primary" style= "margin: auto;">
                 <tr>
                     <th>Name</th>
                     <th>Email</th>
